# grok-build-proxy

./: .dockerignore  .gitignore  COMPATIBILITY.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  build.rs  go.mod  go.sum  install.sh
.github/: failed-latest-ci.txt
.github/workflows/: ci.yml  release.yml
cmd/grok-build-proxy/: auth_command.go  doctor_command.go  grok_config.go  main.go  server.go  server_test.go
docs/performance/: 2026-07-19-gpt-5-6-latency-baseline.md
examples/: grok-config.toml
internal/auth/: store.go  store_test.go
internal/catalog/: catalog.go  catalog_test.go
internal/codexcli/: client.go  client_test.go
internal/doctor/: doctor.go  doctor_test.go
internal/modelmap/: modelmap.go  modelmap_test.go
internal/monitor/: event_sanitize.go  identity.go  input.go  integration_test.go  program.go  program_review_regression_test.go  review_regression_test.go  selection.go  session.go  state.go  state_test.go  view.go  view_test.go
internal/proxy/: codex_body.go  codex_body_helpers.go  codex_compat_test.go  codex_error_log.go  codex_http_client.go  codex_sse_compat.go  codex_sse_compat_test.go  codex_tool_contract_test.go  handler.go  handler_test.go  observation.go  observation_regression_test.go  response_observation_capture.go  responses_sse_assembler.go  (+18 more)
src/: auth.rs  catalog.rs  codexcli.rs  doctor.rs  events.rs  grokconfig.rs  kimi_cli.rs  lib.rs  main.rs  modelmap.rs  monitor.rs  provider.rs  proxy.rs  report.rs  sse.rs  store.rs
tests/: cli.rs  kimi_auth.rs  kimi_http.rs  kimi_protocol.rs  sse_chunks.rs
(+26 files in other folders)
