[package]
name = "grok-build-proxy"
version = "0.0.13"
edition = "2024"
rust-version = "1.88"
description = "A local Grok Build to ChatGPT Codex proxy for macOS"
license = "MIT"
repository = "https://github.com/bengHak/grok-build-proxy"

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
# Direct crossterm 0.29 for raw mode / events / TerminalGuard.
# ratatui 0.29 still depends on crossterm 0.28 for CrosstermBackend drawing;
# both write ANSI to the same stdout (process-wide termios). Intentional until
# ratatui supports 0.29 without a higher MSRV.
crossterm = "0.29"
futures-util = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
